[package]
name = "vulnfusion"
version = "0.1.0"
edition = "2021"
authors = ["VulnFusion Team"]
description = "Advanced vulnerability detection tool combining Rudra and SafeDrop techniques"
license = "MIT"
repository = "https://github.com/vulnfusion/vulnfusion"
keywords = ["security", "vulnerability", "static-analysis", "rust", "memory-safety"]
categories = ["command-line-utilities", "development-tools", "parsing"]

[[bin]]
name = "vulnfusion"
path = "src/main.rs"

[dependencies]
# Core Rust compiler integration
rustc_tools_util = "0.3"
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Graph algorithms and data structures
petgraph = "0.6"
indexmap = "2.0"
hashbrown = "0.14"

# Parallel processing
rayon = "1.7"
crossbeam = "0.8"

# Command line interface
clap = { version = "4.4", features = ["derive"] }
console = "0.15"
indicatif = "0.17"
colored = "2.0"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"

# File system and path handling
walkdir = "2.4"
glob = "0.3"
path-absolutize = "3.1"

# Regular expressions and pattern matching
regex = "1.10"
once_cell = "1.19"
lazy_static = "1.4"

# Data visualization (for report generation)
plotly = "0.8"
tera = "1.19"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Configuration file handling
toml = "0.8"

# System information
num_cpus = "1.16"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
debug = true
incremental = true
